--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@
 
 title: Tang Zhantong
 email: zhantongtang@gmail.com
-description: "专注于减少对实验动物的伤害"
+description: "Tang Zhantong - Committed to reducing dependence on and harm to experimental animals through innovative in vitro models and organ-on-a-chip technology."
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://tangzhantong.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  tangzhantong
@@ -31,9 +31,10 @@ plugins:
   - jekyll-feed
 # 导航栏设置 (按顺序排列)
 header_pages:
+  - news.md
   - research.md
   - members.md
-
+  - blog.md
   - gallery.md
   - address.md
 
